--- a/doc/01-Introduction.tex
+++ b/doc/01-Introduction.tex
@@ -116,10 +116,12 @@ The concept of local connectivity gives one of the key characteristics of a spac
 and differentiates it from other curves that can fill rectangular regions but don't do so in a
 locally connected way \footnote{For example, the \textit{zig-zag} curve that creates a straight line until
 it hits the bounds of the region to turn around and increment in the other dimensional lengths to fill 
-a rectangular region.}.
+a rectangular region, is not space filling as it isn't locally connected.}.
 The local connectivity, or locality, is the feature that allows clustering in dimension one to
-remain clustered in higher dimensions \footnote{We refer the reader to
-Sagan \cite{sagan_1994} for a more thorough introduction to local connectivity.}.
+remain clustered in higher dimensions.
+
+%\footnote{We refer the reader to
+%Sagan \cite{sagan_1994} for a more thorough introduction to local connectivity.}.
 
 If a cuboid region has one side larger or smaller than the maximum or minimum of the remaining two, respectively,
 for a given ratio, $\rho$, it is said to be \textit{eccentric}. % or $\rho-\textit{eccentric}$.
