--- a/doc/04-Results.tex
+++ b/doc/04-Results.tex
@@ -95,6 +95,8 @@ $$
 $$
 
 Where $|p_i - p_j|$ is the standard Euclidean norm.
+Replacing the above with an inequality leads to a \textit{H{\"o}lder condition}.
+
 Modulating the average embedded distance by the scaling function effectively
 normalizes the value by how space filling we would expect it to be.
 Since we take the cumulative distance, this adds one in the exponent for a scaling factor of $x^{-(1+1/d)}$.
