--- a/doc/06-References.bib
+++ b/doc/06-References.bib
@@ -196,6 +196,26 @@
  @String{WHFreeman = "W. H. Freeman and Co." }
 
 
+%  eprint = {https://academic.oup.com/bioinformatics/article-pdf/25/10/1231/48989938/bioinformatics\_25\_10\_1231.pdf},
+% x
+@article{anders_2009,
+  author = {Anders, Simon},
+  title = {Visualization of genomic data with the Hilbert curve},
+  journal = {Bioinformatics},
+  volume = {25},
+  number = {10},
+  pages = {1231-1235},
+  year = {2009},
+  month = {03},
+  abstract = {In many genomic studies, one works with genome-position-dependent data, e.g. ChIP-chip or ChIP-Seq scores. Using conventional tools, it can be difficult to get a good feel for the data, especially the distribution of features. This article argues that the so-called Hilbert curve visualization can complement genome browsers and help to get further insights into the structure of one's data. This is demonstrated with examples from different use cases. An open-source application, called HilbertVis, is presented that allows the user to produce and interactively explore such plots.Availability:  http://www.ebi.ac.uk/huber-srv/hilbert/Contact:  sanders@fs.tum.deSupplementary information:  Supplementary Data are available at Bioinformatics online.},
+  issn = {1367-4803},
+  doi = {10.1093/bioinformatics/btp152},
+  url = {https://doi.org/10.1093/bioinformatics/btp152},
+}
+
+
+
+
 
 
 @misc{jaffer_2015,
@@ -208,6 +228,7 @@
   url={https://arxiv.org/abs/1402.1807}, 
 }
 
+% x
 @inproceedings{mokbel_2002,
   author = {Mokbel, Mohamed F. and Aref, Walid G. and Kamel, Ibrahim},
   title = {Performance of multi-dimensional space-filling curves},
@@ -225,6 +246,7 @@
   series = {GIS '02}
 }
 
+% x
 @ARTICLE{gotsman_1996,
   author={Gotsman, C. and Lindenbaum, M.},
   journal={IEEE Transactions on Image Processing}, 
@@ -237,6 +259,7 @@
   doi={10.1109/83.499920}
 }
 
+% x
 @inproceedings{kupers_2012,
   title={ON SPACE-FILLING CURVES AND THE HAHN-MAZURKIEWICZ THEOREM},
   author={Alexander Kupers},
@@ -244,6 +267,7 @@
   url={https://api.semanticscholar.org/CorpusID:18446304}
 }
 
+% x
 @article{bohm_2021,
   title={A Novel Hilbert Curve for Cache-Locality Preserving Loops},
   author={Christian B{\"o}hm and Martin Perdacher and Claudia Plant},
@@ -254,6 +278,17 @@
   url={https://api.semanticscholar.org/CorpusID:57781978}
 }
 
+% x
+@book{wiener_1988,
+	place={Cambridge},
+	title={The Fourier Integral and Certain of its Applications},
+	publisher={Cambridge University Press},
+  author={Wiener, Norbert},
+	pages={17-18},
+	year={1988}
+} 
+
+% x
 @Article{rong_2021,
   AUTHOR = {Rong, Yibiao and Zhang, Xia and Lin, Jianyu},
   TITLE = {Modified Hilbert Curve for Rectangles and Cuboids and Its Application in Entropy Coding for Image and Video Compression},
@@ -270,6 +305,7 @@
 }
 
 
+% x
 @article{lera_2010,
   title = {Lipschitz and Hölder global optimization using space-filling curves},
   journal = {Applied Numerical Mathematics},
@@ -285,9 +321,10 @@
   abstract = {In this paper, the global optimization problem miny∈SF(y) with S=[a,b], a,b∈RN, and F(y) satisfying the Lipschitz condition, is considered. To deal with it four algorithms are proposed. All of them use numerical approximations of space-filling curves to reduce the original Lipschitz multi-dimensional problem to a univariate one satisfying the Hölder condition. The Lipschitz constant is adaptively estimated by the introduced methods during the search. Local tuning on the behavior of the objective function and a newly proposed technique, named local improvement, are used in order to accelerate the search. Convergence conditions are given. A theoretical relation between the order of a Hilbert space-filling curve approximation used to reduce the problem dimension and the accuracy of the resulting solution is established, as well. Numerical experiments carried out on several hundreds of test functions show a quite promising performance of the new algorithms.}
 }
 
+% x
 @misc{haverkort_2016_inventory,
   title={An inventory of three-dimensional Hilbert space-filling curves}, 
-  author={Herman Haverkort},
+  author={Haverkort, Herman},
   year={2016},
   eprint={1109.2323},
   archivePrefix={arXiv},
@@ -295,6 +332,7 @@
   url={https://arxiv.org/abs/1109.2323}, 
 }
 
+% x
 @article{haverkort_2016_howmany,
   author = {Haverkort, Herman},
   year = {2016},
@@ -304,6 +342,7 @@
   doi = {10.48550/arXiv.1610.00155}
 }
 
+% x
 @article{haverkort_2010,
   title = {Locality and bounding-box quality of two-dimensional space-filling curves},
   journal = {Computational Geometry},
@@ -320,9 +359,10 @@
   abstract = {Space-filling curves can be used to organise points in the plane into bounding-box hierarchies (such as R-trees). We develop measures of the bounding-box quality of space-filling curves that express how effective different space-filling curves are for this purpose. We give general lower bounds on the bounding-box quality measures and on locality according to Gotsman and Lindenbaum for a large class of space-filling curves. We describe a generic algorithm to approximate these and similar quality measures for any given curve. Using our algorithm we find good approximations of the locality and the bounding-box quality of several known and new space-filling curves. Surprisingly, some curves with relatively bad locality by Gotsman and Lindenbaum's measure, have good bounding-box quality, while the curve with the best-known locality has relatively bad bounding-box quality.}
 }
 
-@misc{haverkort_2010,
+% x
+@misc{haverkort_2010_arrwwid,
   title={Recursive tilings and space-filling curves with little fragmentation}, 
-  author={Herman Haverkort},
+  author={Haverkort, Herman},
   year={2010},
   eprint={1002.1843},
   archivePrefix={arXiv},
@@ -330,9 +370,10 @@
   url={https://arxiv.org/abs/1002.1843}, 
 }
 
+% -
 @misc{haverkort_2018,
   title={Sixteen space-filling curves and traversals for d-dimensional cubes and simplices}, 
-  author={Herman Haverkort},
+  author={Haverkort, Herman},
   year={2018},
   eprint={1711.04473},
   archivePrefix={arXiv},
@@ -340,9 +381,10 @@
   url={https://arxiv.org/abs/1711.04473}, 
 }
 
+% x
 @misc{holzmuller_2019,
   title={Efficient Neighbor-Finding on Space-Filling Curves}, 
-  author={David Holzmüller},
+  author={Holzmüller, David},
   year={2019},
   eprint={1710.06384},
   archivePrefix={arXiv},
@@ -350,6 +392,8 @@
   url={https://arxiv.org/abs/1710.06384}, 
 }
 
+%eprint = {https://ietresearch.onlinelibrary.wiley.com/doi/pdf/10.1049/cje.2020.00.171},
+% x
 @article{jia_2022,
   author = {JIA, Lianyin and LIANG, Binbin and LI, Mengjuan and LIU, Yong and CHEN, Yinong and DING, Jiaman},
   title = {Efficient 3D Hilbert Curve Encoding and Decoding Algorithms},
@@ -360,11 +404,12 @@
   keywords = {3D Hilbert curve, Space-filling curve, state view, JFK-3HE, JFK-3HD},
   doi = {https://doi.org/10.1049/cje.2020.00.171},
   url = {https://ietresearch.onlinelibrary.wiley.com/doi/abs/10.1049/cje.2020.00.171},
-  eprint = {https://ietresearch.onlinelibrary.wiley.com/doi/pdf/10.1049/cje.2020.00.171},
   abstract = {Hilbert curve describes a one-to-one mapping between multidimensional space and 1D space. Most traditional 3D Hilbert encoding and decoding algorithms work on order-wise manner and are not aware of the difference between different input data and spend equivalent computing costs on them, thus resulting in a low efficiency. To solve this problem, in this paper we design efficient 3D state views for fast encoding and decoding. Based on the state views designed, a new encoding algorithm (JFK-3HE) and a new decoding algorithm (JFK-3HD) are proposed. JFK-3HE and JFK-3HD can avoid executing iteratively encoding or decoding each order by skipping the first 0s in input data, thus decreasing the complexity and improving the efficiency. Experimental results show that JFK-3HE and JFK-3HD outperform the state-of-the-arts algorithms for both uniform and skew-distributed data.},
   year = {2022}
 }
 
+% eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/1467-8659.00413},
+% x
 @article{dafner_2000,
   author = {Dafner, Revital and Cohen-Or, Daniel and Matias, Yossi},
   title = {Context-based Space Filling Curves},
@@ -375,7 +420,6 @@
   keywords = {Motion retargeting problem, adaptation to different characters.},
   doi = {https://doi.org/10.1111/1467-8659.00413},
   url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/1467-8659.00413},
-  eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/1467-8659.00413},
   abstract = {A context-based scanning technique for images is presented. An image is scanned along a context-based space filling curve that is computed so as to exploit inherent coherence in the image. The resulting one-dimensional representation of the image has improved autocorrelation compared with universal scans such as the Peano-Hilbert space filling curve. An efficient algorithm for computing context-based space filling curves is presented. We also discuss the potential of improved autocorrelation of context-based space filling curves for image and video lossless compression.},
   year = {2000}
 }
@@ -393,7 +437,7 @@
   doi={10.1109/69.908985}
 }
 
-
+% x
 @inproceedings{zhang_2006,
   author = {Zhang, Jian and Kamata, Sei-ichiro and Ueshige, Yoshifumi},
   year = {2006},
@@ -405,6 +449,7 @@
   doi = {10.1007/11821045_31}
 }
 
+% x
 @article{zhang_2007,
   author = {ZHANG, Jian and KAMATA, Sei-ichiro and Ueshige, Yoshifumi},
   year = {2007},
@@ -416,8 +461,8 @@
   doi = {10.1093/ietfec/e90-a.3.682}
 }
 
-
-@online{lutanhho_2003,
+% x
+@online{lutanho_2003,
   author = {Tautenhahn, Lutz},
   year = {2003},
   title = {draw a space-filling curve of arbitrary size},
@@ -425,6 +470,26 @@
   lastaccessed = {April 12, 2025}
 }
 
+% x
+@online{cortesi_2011,
+  author = {Cortesi, Aldo},
+  year = {2011},
+  title = {Visualizing binaries with space-filling curves},
+  url = {https://corte.si/posts/visualisation/binvis/}
+  lastaccessed = {May 11, 2025}
+}
+
+% x
+@online{xkcd_195,
+  author = {Munroe, Randall},
+  year = {2006},
+  title = {Map of the Internet},
+  url = {https://xkcd.com/195/},
+  lastaccessed = {May 11, 2025}
+}
+
+
+% x
 @incollection{voorhies_1991,
   title = {I.8 - SPACE-FILLING CURVES AND A MEASURE OF COHERENCE},
   editor = {JAMES ARVO},
@@ -441,6 +506,7 @@
   This chapter focuses on space-filling curves and a measure of coherence. Some space- filling curves can exploit coherence in two dimensions despite a range of object area sizes. As fractals, they are self-similar at multiple resolutions. Thus, if they do a good job of visiting all the pixels corresponding to a particular object area at one scale, then they may have this advantage for much larger or smaller object areas. As topologically continuous curves, areas visited always are adjacent. Peano curves are recursive boustrophedonic patterns. They snake back and forth at multiple recursion levels, filling the plane. Because each pattern enters and exits from opposite rectangle corners, they implicitly use serpentines with an odd number of swaths, a minimum of three. Both the Peano and Hilbert curves far exceed the coherence = 1.00 measure of conventional scanline traversal. The Hilbert curve appears superior, and is easier to generate. Better performance from a real renderer can be expected simply by choosing either of these alternative traversal sequences.}
 }
 
+% x
 @article{asano_1997,
   title = {Space-filling curves and their use in the design of geometric data structures},
   journal = {Theoretical Computer Science},
@@ -455,6 +521,7 @@
   abstract = {We are given a two-dimensional square grid of size N × N, where N :=2n and n⩾0. A space filling curve (SFC) is a numbering of the cells of this grid with numbers from c + 1 to c + N2, for some c⩾0. We call a SFC recursive (RSFC) if it can be recursively divided into four square RSFCs of equal size. We prove several useful and interesting combinatorial properties of recursive and general SFCs. For an optimality criterion that is important in the design of geometric data structures, we propose a RSFC that is optimal in the worst case and outperforms the previously known RSFCs.}
 }
 
+% x
 @article{niedermeier_2002,
   title = {Towards optimal locality in mesh-indexings},
   journal = {Discrete Applied Mathematics},
@@ -470,6 +537,7 @@
   abstract = {The efficiency of many data structures and algorithms relies on “locality-preserving” indexing schemes for meshes. We concentrate on the case in which the maximal distance between two mesh nodes indexed i and j shall be a slow-growing function of |i−j|. We present a new two-dimensional (2-D) indexing scheme we call H-indexing, which has superior (possibly optimal) locality in comparison with the well-known Hilbert indexings. H-indexings form a Hamiltonian cycle and we prove that they are optimally locality-preserving among all cyclic indexings. We provide fairly tight lower bounds for indexings without any restriction. Finally, illustrated by investigations concerning 2-D and 3-D Hilbert indexings, we present a framework for mechanizing upper-bound proofs for locality.}
 }
 
+% x
 @book{sagan_1994,
   title={Space-Filling Curves},
   author={Sagan, H.},
@@ -481,6 +549,7 @@
   publisher={Springer New York}
 }
 
+% x
 @article{hamilton_2008,
   title = {Compact Hilbert indices: Space-filling curves for domains with unequal side lengths},
   journal = {Information Processing Letters},
@@ -496,6 +565,7 @@
   abstract = {In this paper we define a new compact Hilbert index which, while maintaining all of the advantages of the standard Hilbert curve, permits spaces with unequal dimension cardinalities. The compact Hilbert index can be used in any application that would have previously relied on Hilbert curves but, in the case of unequal side lengths, provides a more memory efficient representation. This advantage is particularly important in distributed applications (Parallel, P2P and Grid), in which not only is memory space saved but communication volume is significantly reduced.}
 }
 
+% x
 @book{madras_2013,
   title={The Self-Avoiding Walk},
   author={Madras, N. and Slade, G.},
@@ -506,6 +576,7 @@
   publisher={Birkh{\"a}user Boston}
 }
 
+% x
 @book{hilbert2004david,
   title={David Hilbert's lectures on the foundations of mathematics and physics, 1891-1933},
   author={Hilbert, D. and Ewald, W. and Hallett, M. and Majer, U. and Sieg, W.},
@@ -516,3 +587,38 @@
   year={2004},
   publisher={Springer}
 }
+
+% x
+@book{christensen2005complexity,
+  title={Complexity and Criticality},
+  author={Christensen, K. and Moloney, N.R.},
+  isbn={9781860945045},
+  lccn={2006276739},
+  series={Advanced physics texts},
+  url={https://books.google.com/books?id=bAIM1_EoQu0C},
+  year={2005},
+  publisher={Imperial College Press}
+}
+
+% x
+@online{moore_2016,
+  title={Fast Hilbert Curve Generation, Sorting and Range Queries},
+	author={Moore, Doug},
+	url={https://web.archive.org/web/20160604090636/http://www.tiac.net/~sw/2008/10/Hilbert/moore/index.html},
+	year={2016},
+  lastaccessed = {May 11, 2025}
+}
+
+% x
+@ARTICLE{butz_1971,
+  author={Butz, A.R.},
+  journal={IEEE Transactions on Computers}, 
+  title={Alternative Algorithm for Hilbert's Space-Filling Curve}, 
+  year={1971},
+  volume={C-20},
+  number={4},
+  pages={424-426},
+  keywords={Algorithms, bandwidth reduction, display, mathematical programming, pattern recognition, solution of equations, space-filling curves, transforming multidimensions to one dimension.},
+  doi={10.1109/T-C.1971.223258}
+}
+
