--- a/doc/Gilbert.tex
+++ b/doc/Gilbert.tex
@@ -71,8 +71,8 @@ a conceptually straight forward generalization of the Hilbert curve,
 that works on arbitrary rectangular regions.
 The construction provides reasonable worst case run-time guarantees for random
 access lookups for both two and three dimensions.
-We also provide comparisons to other Hilbert curve generalization methods
-and investigate overall quality metrics of the Gilbert curve construction.
+We also provide experiments showing comparable quailty in locality of the Gilbert curve
+to the Hilbert curve for a range of cuboid regions.
 \end{abstract}
 
 \maketitle
