--- a/doc/02-Related-Work.tex
+++ b/doc/02-Related-Work.tex
@@ -1,13 +1,103 @@
 \section{Related Work}
 
+%% this section is roughly organized as follows:
+%%
+%% * [x] first discovery (peano, hilbert)
+%% * [x] defining feature (locality) and reference (sagan)
+%% * [x] uses in "harder/erious" engineering (integration, data structures, etc.)
+%% * [x] uses in visualization (soft uses)
+%% * [x] generalizations
+%%   - [x] rong etal and point out limitations (complicated, powers of two dim. etc.)
+%%   - [x] tautenhahn, initial idea with bounds (2d only, but can see how to generalize to 3d)
+%% * [x] enumeration of different sfc (tautenhahn has some of this but mostly should be haverkort)
+%% * [x] measures of goodness
+%%   - [x] haverkort mostly
+%%   - [x] coherence (voorhies)
+%% * close section with references to making it efficient
+%%   - mention recursive soultion in this paper hasn't prioritized hyper efficient memory
+%%     and rutime optimization
+%%
+
 Peano discovered the first space filling curve, with Hilbert later discovering
 a space filling curve that we concern ourselves with in this paper \cite{hilbert2004david}.
 Hilbert's curve takes a one dimensional line and maps it to a compact, connected and locally connected
 set.
-For an introduction to space filling curves in addition to the necessary and sufficient
-conditions for a space filling curve, the reader is referred to Sagan \cite{sagan_1994}.
+We only touch on the technical definitions in this paper but the reader is referred to
+Sagan \cite{sagan_1994} for a more thorough introduction.
+An introduction to the space filling curves with a focus on the 
+Hahn-Mazurkiewicz theorem, the sufficient and necessary conditions to be a space
+filling curve, can be found in Kupers \cite{kupers_2012}.
 
-As an artifact of the construction scheme, the Hilbert curve requires the side lengths to be exact powers of two.
+The locally connected property of space filling curves
+provide a condition where
+nearby index points in the domain lead to
+scaled nearby points in the output embedded dimension.
+The \textit{locality} feature means that nearby index points
+cluster in the mapped higher dimensional space.
+This feature can be used to highlight one dimensional clustered data in higher dimensions.
+
+Wiener noticed that Lebesgue integration could be reduced from
+higher dimensional integration to one-dimensional integration by the use of space filling curves \cite{wiener_1988}.
+Lera and Sergeyev have investigated reducing higher dimensional global optimization
+on functions satisfying the Lipschitz condition, reducing the multi dimensional optimization to a
+single dimension through a space filling curve mapping \cite{lera_2010}.
+Asano et al. discuss space filling curves and their uses in geometric data structures
+to create localized spatial access patterns \cite{asano_1997},
+B{\"o}hm, Perdacher and Plant
+show speedups in Cholesky decomposition and the Floyd-Warshall algorithm by reducing cache misses from
+a space filling curve data access schedule \cite{bohm_2021}.
+Niedermeier discusses a new method of H-indexing as a benefit over a Hilbert indexing scheme to
+create optimal locality for mesh indexing in \cite{niedermeier_2002}.
+
+Munroe used the locality property to create a stylized mapping of the internet protocol (IPv4) space \cite{xkcd_195}.
+Anders used a Hilbert curve mapping to visualize the human genome as a 2d map \cite{anders_2009}.
+Cortesi has used a Hilbert curve to visualize binary files \cite{cortesi_2011}.
+Dafner, Cohen-Or and Matias use a space filling curve that is adapted to the image context to improve autocorrelation
+above what can be achieved with a Peano or Hilbert curve \cite{dafner_2000}.
+
+
+Hamilton and Rau-Chaplin explore creating Hilbert curves with unequal side lengths in \cite{hamilton_2008} but
+require the side lengths to still be exact powers of two.
+Rong, Zhang and Lin \cite{rong_2021} proposed a generalization of the 2D Hilbert curve to arbitrary rectangular
+regions that involves subdividing smaller regions into nearest powers of to areas until a base case is reached.
+They extend their method to 3D but require the depth dimension to be an exact power of two.
+
+In a website application and scanned note \cite{lutanho_2003}, Tautenhahn provided the basis for a generalized 2D
+space filling curve.
+Tautenhahn also included policies for when to subdivide regions preferentially in only one dimension, what we call
+\textit{eccentric splits}.
+Tautenhahn's exploration details the parity arguments necessary for when a subdivision scheme can be employed
+without creating diagonal moves (\textit{notches}).
+In this paper, we extend Tautenhahn's ideas to create a 2D and 3D generalized Hilbert curve, employing parity arguments
+and conditions under which eccentric splits should be employed.
+
+For recursive space filling curves, there is a choice in recursive or subdivision schemes.
+Haverkort catalogs different techniques for constructing 3D Hilbert curves in \cite{haverkort_2016_inventory} and \cite{haverkort_2016_howmany}.
+
+
+Though all space filling curves must fill the domain space and maintain locality, features or
+fine grained qualities might differ between subdivision schemes.
+Mokbel et al. provide some performance statistics of different recurrence schemes in \cite{mokbel_2002}.
+Gotsman and Lindenbaum provide more detailed definitions of locality, explore their definition of locality for
+different space filling curves and conclude that the Hilbert curve is close to optimal \cite{gotsman_1996}.
+Haverkort and Walderveen provide a bounding-box quality metric for 2D space filling curves in \cite{haverkort_2010}.
+In \cite{haverkort_2010_arrwwid}, Haverkort provides a concept of an Arrwwid number that measures how best a volume
+can be covered by curve sections and discusses optimal choices of space filling curves based on this metric.
+Voorhies defines the concept of \textit{coherence} to measure how many times a ray passes through a volume
+to differentiate between zig-zag curves, Peano curves and Hilbert curves \cite{voorhies_1991}.
+
+Though recursive subdivision methods can be made to run in $O(\log N)$ time and space ($N \sim W \times H \times D$),
+this is undesirable under certain high performance conditions where a memory usage needs to be constant or
+where constant bounds matter.
+Butz described a non-recursive, byte-oriented algorithm for Hilbert's space filling curve in \cite{butz_1971}.
+Moore later extended Butz's idea to create a fast non-recursive algorithm that includes range queries \cite{moore_2016}.
+Jia et al. provide further enhancements for efficient the 3D Hilbert curve encoding and decoding in \cite{jia_2022}.
+In Holzm{\"u}ller's bachelor thesis, an algorithm for average case $O(1)$ neighbor queries is shown \cite{holzmuller_2019}.
+
+For a more general treatment on self avoiding walks, the reader is referred to Madras and Slate \cite{madras_2013}.
+Though not directly connected to space filling curves,
+the reader is referred to Christensen and Moloney \cite{christensen2005complexity} for methods used in data analysis
+and visualization used in this paper.
 
 
 %---
