--- a/doc/07-Appendix.tex
+++ b/doc/07-Appendix.tex
@@ -231,7 +231,20 @@ $$
 
 Showing there is an average defect reduction.
 
+%%%%
+%%%%
+%%%%
+
+
 \subsection{$|\beta| >> |\alpha| \sim |\gamma|$ or $|\alpha| << |\beta| \sim |\gamma|$}
+
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=\linewidth]{gilbert3d_eccentric_appendix_s2.pdf}
+  \caption{ An $S_2$ eccentric subdivision showing the threshold, $\sigma$, used to determine when we should use this split
+            and the split point ratio, $\rho$, to reduce the defect for a more harmonious subdivision. }
+  \label{fig:eccentric_s2}
+\end{figure}
 
 \begin{itemize}
   \item Shape template: $S_2$
