2d eccentric split figure (appendix)

--- a/doc/07-Appendix.tex
+++ b/doc/07-Appendix.tex
@@ -32,6 +32,15 @@ If the defect is too high, we might want to split the larger sides while keeping
 
 \subsection{2D Eccentric Split Threshold}
 
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=\linewidth]{gilbert2d_eccentric_appendix.pdf}
+  \caption{ When the length width like dimension ($|\alpha|$) gets larger than a threshold of the height-like
+            dimension ($\sigma |\beta|$), then the width like dimension is split into two. }
+  \label{fig:eccentric_2d}
+\end{figure}
+
+
 In this section, we justify splitting the rectangle into
 two roughly equal parts when $(|\alpha|/|\beta| > 3/2)$.
 
