--- a/doc/07-Appendix.tex
+++ b/doc/07-Appendix.tex
@@ -30,7 +30,7 @@ This weights the defect of each subdivided cuboid by its proportional volume.
 The defect gives us a coarse idea of how lopsided or \textit{eccentric} a cuboid region is.
 If the defect is too high, we might want to split the larger sides while keeping the smaller sides the same size.
 
-\subsection{2D Eccentric Split Threshold}
+\subsection{2D Eccentric Split Threshold} \label{appendix:eccentric_2d}
 
 \begin{figure}[h]
   \centering
